--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "lodash": "^4.17.11",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
+    "vue-lodash": "^2.0.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
